--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		<br>  Worked as a customer engineering team member to promptly resolve customer issues.
 		<br>  Having knowledge of Cucumber, Gherkin, Puppeteer and Cypress framework with javaScript.
 		<br>  Worked with DevOps team to integrate Nexus vulnerability scan for each check-in.
-		<br>  Active volunteer of Corporate social responsibility team at BMC India software Pvt. Ltd</p>
+		<br>  Active volunteer of Corporate social responsibility team at BMC Software India Pvt. Ltd.</p>
 
             <h3 style="margin-top: 40px; margin-bottom: 0px;">AREAS OF EXPERTISE</h3>
             <ul class="list-check">
